# SmartHome

./: README.md  justfile
temp-sensor/: Cargo.toml
temp-sensor-arduino-esp32/: temp-sensor-arduino-esp32.ino
temp-sensor-client-ble/: Cargo.toml  config.toml
temp-sensor-client-ble/src/: main.rs
temp-sensors-std/: Cargo.toml  cfg.toml
temp-sensors-std/src/: main.rs
ulisp-esp32/: ulisp-esp32.ino
